baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_field_no_cascade/baml_tests__diagnostic_errors__duplicate_field_no_cascade__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.Box {
  value: int
  value: string
}
class user.Box$stream {
  value: int | null
  value: string | null
}
function user.repro(box: user.Box) -> int  [expr] {
  {  } box.value
}
