baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_field_no_cascade/baml_tests__diagnostic_errors__duplicate_field_no_cascade__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Box {
  value: int
  value: string
}
function user.repro(box: user.Box) -> int throws never {
  { : !error
    box.value : !error
  }
}
class user.Box$stream {
  value: int | null
  value: string | null
}
