baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_field_no_cascade/baml_tests__diagnostic_errors__duplicate_field_no_cascade__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] E0012

  × Duplicate field `Box.value`
   ╭─[main.baml:3:5]
 2 │     value: int,
   ·     ──┬──
   ·       ╰── first defined as field here
 3 │     value: string,
   ·     ──┬──
   ·       ╰── duplicate field definition
   ╰────
